<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">
                <TextView
                    android:gravity="center"
                    style="@style/textStyle"
                    android:text="@string/team_a" />
                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/scoreStyle"
                    android:text="0" />
                <Button
                    style="@style/buttonStyle"
                    android:text="@string/goal"
                    android:onClick="countGoalA"/>
                <Button
                    style="@style/buttonStyle"
                    android:onClick="countCornersA"
                    android:text="@string/corner_button" />
                <Button
                    style="@style/buttonStyle"
                    android:onClick="countFoulsA"
                    android:text="@string/foul_button"  />
                <TextView
                    android:id="@+id/stats_a"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    style="@style/textStyle"
                    android:text="@string/stats"
                    />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">
                <TextView
                    style="@style/textStyle"
                    android:gravity="center"
                    android:text="@string/team_b" />
                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/scoreStyle"
                    android:text="0" />
                <Button
                    style="@style/buttonStyle"
                    android:onClick="countGoalB"
                    android:text="@string/goal" />
                <Button
                    style="@style/buttonStyle"
                    android:text="@string/corner_button"
                    android:onClick="countCornersB"/>
                <Button
                    style="@style/buttonStyle"
                    android:text="@string/foul_button"
                    android:onClick="countFoulsB"/>
                <TextView
                    android:id="@+id/stats_b"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    style="@style/textStyle"
                    android:text="@string/stats"
                    />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:onClick="reset"
                android:text="@string/reset" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
